# Neural-Network

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  activations.cpp  activations.hpp  avg_pooling_test.cpp  avgpool.cpp  convolutional.cpp  convolutional.hpp  dataloader.cpp  dataloader.hpp  dense.cpp  dense.hpp  image_loader.cpp  image_loader.hpp  layer.hpp  losses.cpp  losses.hpp  maxpool.cpp  medical_classifier.cpp  mnist_conv.cpp  mnist_final.cpp  mnist_loader.cpp  network.cpp  network.hpp  pooling.cpp  pooling.hpp  reshape.cpp  reshape.hpp  sum_predictor.cpp  test.cpp  test_dataloader.cpp  test_img_loader.cpp  xor_example.cpp
